web/src/main/webapp/assets/mobile/o2/css/mobile.css
/* ... */
h2  a {
	text-decoration: none;
}
select {
	width: 100%;
	font-size: 0.8em;
	height: 25px;
	line-height: 1.6em;
	padding-left: 2px;
	padding-right: 0;
}
p  {
	font-size: 1.1em;		
	margin: 7px 14px 7px 17px;	 
}
.content p {
	margin: 7px 14px 7px 21px;
	font-size: 16px;		
	line-height: 1.4em;
	color: #616465;
}
.getAppContent p {margin-left: 42px !important; color: #5f584e;}
.content .oneQuestion  p  {margin-left: 0px;}
.content p.firstPar  {
	margin-top: 1.5em;
	color: #1d3150;
}
.text p {
	font-size: 0.8em;		
	line-height: 1.3empx;
}
.oneQuestion p
{
	color: #838383;	
}
td, li {
	font-size: 1.1em;		
}
form {
	display: block;
}
/*service tools*/
.floatRight {
	float: right !important; 
}
.floatLeft {
	float: left; 
}
.clr {
	clear: both;
}
/*layout*/
/*header*/
.header {
	background: #142847 url(../imgs/bgs/header.png) repeat-x;	
	height: 71px;	
	margin-bottom: 2px;
}		
.logo {
	display: block;
	top: 15px;
	left: 10px;	
	position: absolute;	
}
.logo img {
	height: 39px;
}

.container {
	
	padding-bottom: 15px;	
	padding-top: 12px;	
}

.content {
	margin: 10px 17px;
	padding-top: 1px;
	padding-bottom: 1px;
	background-color: #ffffff;
}
.getAppContent {
	border: none;
	filter:progid:DXImageTransform.Microsoft.Alpha(opacity=100); 
 	opacity: 1.0; 
 	-moz-opacity: 1.0; 
 	-khtml-opacity: 1.0;
	/*height: 654px;*/
	overflow: hidden;
	position: relative;
	color: #fff;
}
.getAppContent .oneField {
	margin-left: 27px;
	margin-right: 27px;
}
.getAppContent h1 {
	color: #1d3150;
	padding-bottom: 10px;
}
.getAppContent .formButton,.getAppContent .formButton input  {
	background: transparent url(../imgs/bgs/button_pink.png) repeat-x 0px 0px !important;	
	box-shadow: none;
	-moz-box-shadow: none;
	-webkit-box-shadow:  none;
}
.orBox {
	text-align: center;
	height: 53px;
	background: transparent url(../imgs/bgs/or_bg.png) repeat-x center center ;
	/*position: absolute;
	top: 330px;
	left: 48%;*/
}
.getAppBottom {
	/*margin-top: 80px;*/
}
.getAppContent .formButton {
	margin-left: 27px; 
	margin-right: 27px;
}

.linksToStores {
	height: 202px;
	/*position: absolute; 
	top: 456px;
	left: 20px;*/
	width: 99%;
}
.linksToStores a {
	display: block;
	float: left;
	width: 29%;
	margin: 0 7px;
	height: 173px;
}
.appStore {
	background: transparent url(../imgs/apple.png) no-repeat left bottom;	
}
.androidMarket {
	background: transparent url(../imgs/android.png) no-repeat left bottom;	
}
.bbMarket {
	background: transparent url(../imgs/blackberry.png) no-repeat left bottom;	
}

/*text content*/
.text {
	padding-bottom: 12px;
}
a.button, input.button, button {
	background: #142847 url(../imgs/bgs/button.png) repeat-x 0 center;	
	height: 32px;	
	font-weight: bold;
	color: #ffffff;
	line-height: 29px;
	text-decoration: none;
	padding: 2px 0;
	border: 1px solid #000000;
	display: inline-block;	
	//text-shadow:  0px -1px 1px #6A023F; 	
	font-family: 'FrutigerRegular', Helvetica, Arial, sans-serif!important;
}

input.accounts{
	padding-left: 25px;
	padding-right: 10px;
	line-height: 25px;
	padding-top: 0px;
	padding-bottom: 3px;
	border: 1px solid #000000;
}
.buttonBox  {
	float: right;
	margin: 18px 17px 13px 0;
	position: relative; 
}
.buttonBox .button {
	font-size: 14px;
	text-transform: uppercase;
}
.buttonTop {
 
}
.footer .buttonBox a {
	font-size: 1.3em;
	margin-right: 0;
}
.footer .buttonBox {
	margin-right: 0;
}
.arrow {
	display: inline-block;
	width: 15px;
	background: transparent  url(../imgs/bgs/arrow_button_left.png) no-repeat 0px 0px;	
	height: 19px;
	position: absolute;
	left: 5px;
	top: 6px;
}

.buttonWrapper {
	margin: 17px;	
}


/*marketing*/
.marketingMaterials {	
	height: 0px;
	text-align: center;
}
.marketingMaterials img {
	margin-top: 31px;
	display: inline-block;
	text-align: center;
}
.rules
{
	background-color: #efefef;
	font-size: 0.8em;		 
	line-height: 1em;
	color: #525252;
	padding: 11px 28px 14px 28px;
}
.content p.bigSizeText {
	font-size: 1.1em;			
	margin-top: 18px;
	padding: 0;
	color: #1d3150;
}
.firstPar {
	margin-top: 23px;
	color: #1d3150;	
}
.footer {	
	padding: 0px 15px 10px 0;
}
.footer a {	
	text-decoration: none;	
	display: inline-block;
	margin-right: 20px;
	color: #ffffff;
	font-size: 16px;
	font-family: 'FrutigerBold';	
}
.bottomLinks  {
	text-align: center;
	padding: 10px 0 0 0;
}

.bottomLinks span {
	display: inline-block;
	padding: 0 8px;
	font-size: 0.8em;		
	line-height: 0.8em;
}
.faqLink {
	display: inline-block; 
	margin-left: 25%;
}
.copyright {
	text-align: center;
	line-height: 1em;
	font-size: 0.8em;
	padding-top: 10px;
}

.copyright img {
	padding-top: 30px;	
}

.addSpace {	
	display: inline;
	vertical-align: bottom;
}
.addSpace2 {
	margin-top: 55px;
	margin-bottom: 35px;
}
.addSmallSpace {
	margin-top: 20px;
}
/*buttons*/
.contentButton {
	margin: 17px;	
	box-shadow: 1px 2px 1px #bdbdbd; 
	-moz-box-shadow: 1px 2px 1px #bdbdbd; 
	-webkit-box-shadow: 1px 2px 1px #bdbdbd;
}
.shortButton  {
	width: 48%; 
	float: left;
	background: transparent url(../imgs/bgs/orange_button.png) repeat-x 0px 0px;	
	height: 81px;
	border: none none none none;	
	margin: 0;	
}
.oneQuestion {margin-left: 20px;}
.contentButton a, .contentButton input, .contentButton button {
	color: #ffffff;
	font-family: 'FrutigerRegular', Helvetica, Arial, sans-serif!important;
	display: block;
	font-size: 14px;		
	text-decoration: none;
	font-weight: bold;
	margin: 0px;
}
.facebookLoginButton {
	background: #4266ad url(../imgs/bgs/fb_button.png) repeat-x;	
	height: 39px;	
	border-top: solid 1px #6c87b9;
	border-right: solid 1px #26457e;
	border-bottom: solid 1px #233f73;
	border-left: solid 1px #26457e;
	margin: 8px 17px 17px 17px;	
}
.facebookLoginButton  a {
	background: transparent url(../imgs/bgs/fb.png) no-repeat 10px 0px;	
	height: 40px;	
	line-height: 40px;	
	padding-left: 47px;	
 	white-space: nowrap;		
 	overflow: hidden;
}
/* ... */

